# storage

./: .pre-commit-config.yaml  README.md  docker-compose.yaml
client/: .env.sample  Dockerfile  eslint.config.js  package-lock.json  package.json
client/src/: App.tsx
server/: .gitignore  Dockerfile  pyproject.toml
server/src/: main.py
