[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-storage"
version = "0.1.0"
description = "Object storage server"
requires-python = ">=3.9"
dependencies = [
    "fastapi===0.128.0",
    "uvicorn===0.40.0",
    "boto3==1.39.4",
    "python-dotenv==1.1.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
